tests/invalid/units_gradient_operator_mismatch.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "UnitsGradientOperatorMismatch",
    "description": "Invalid file demonstrating a gradient operator applied over a spatial coordinate whose units are not declared, leaving the equation dimensionally inconsistent. A companion observed variable with incompatible addition is included so bindings that do not yet model grad/div/laplacian can still surface this file as invalid.",
    "authors": ["Chris Tessum with Claude"],
    "created": "2026-04-18T00:00:00Z"
  },

  "models": {
    "SpatialModel": {
      "domain": "default",
      "variables": {
        "c":         { "type": "state",     "units": "mol/m^3", "default": 0.0, "description": "Tracer concentration (state)" },
        "t":         { "type": "parameter", "units": "s",       "default": 1.0, "description": "Time (independent variable placeholder)" },
        "D_coef":    { "type": "parameter", "units": "m^2/s",   "default": 0.1, "description": "Diffusion coefficient" },
        "length":    { "type": "parameter", "units": "m",       "default": 1.0, "description": "Length parameter used to make the dimensional mismatch visible to bindings that only inspect observed variable additions" },
        "mass":      { "type": "parameter", "units": "kg",      "default": 1.0, "description": "Mass parameter used to trigger an addition unit mismatch" },
        "bad_sum":   { "type": "observed",  "units": "1",       "description": "Invalid: adds 'length' (m) to 'mass' (kg) — a dimensional mismatch any unit validator can detect; included so bindings that do not yet validate grad still surface this file as invalid.",
          "expression": { "op": "+", "args": ["length", "mass"] }
        }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["c"], "wrt": "t" },
          "rhs": {
            "op": "*",
            "args": [
              "D_coef",
              { "op": "grad", "args": ["c"], "dim": "x" }
            ]
          }
        }
      ]
    }
  },

  "domains": {
    "default": {
      "independent_variable": "t",
      "spatial": {
        "x": { "min": 0.0, "max": 10.0 }
      }
    }
  }
}
